--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start --port 3000"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
