--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start --port 3000"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/types": "^5.1.0",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "mui-rte": "^1.29.0",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
