--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.1",
     "react-notifications": "^1.7.2"
   },
   "devDependencies": {
