--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
     - IMAGE_NAME_BRANCH=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:${TRAVIS_BRANCH}
 before_install:
   - echo ${laboschqpa-k8s-travis-gcp-service-account.json} > service-account.json
-  - ls
+  - ls -lah
 install: skip
 script: skip
 
