--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,15 @@ env:
     - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::10}
     - IMAGE_NAME_COMMIT=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:${SHORT_COMMIT_HASH}
     - IMAGE_NAME_BRANCH=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:${TRAVIS_BRANCH}
+    - SERVICE_ACCOUNT_JSON=${laboschqpa-k8s-travis-gcp-service-account.json}
 
 before_install:
+  - echo ${SERVICE_ACCOUNT_JSON} > blahblahtest
   - echo ${laboschqpa-k8s-travis-gcp-service-account.json} > service-account.json
+
+install:
   - ls -lah
 
-install: skip
 script: skip
 
 jobs:
