--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ before_install:
   - echo ${SERVICE_ACCOUNT_JSON} > blahblahtest
   - echo ${laboschqpa-k8s-travis-gcp-service-account.json} > service-account.json
 
-install:
-  - ls -lah
-
+install: skip
 script: skip
 
 jobs:
@@ -24,8 +22,10 @@ jobs:
       if: env(SKIP_DOCKER_BUILD) != "true"
       services:
         - docker
-      script: skip
+      script:
+        - ls -lah
       before_install:
+        - ls -lah
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - IMAGE_NAME_LATEST=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}
       install:
