--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::10}
     - IMAGE_NAME_COMMIT=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:${SHORT_COMMIT_HASH}
     - IMAGE_NAME_BRANCH=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:${TRAVIS_BRANCH}
+    - TEST_BASE64=${TEST_BASE64}
 
 install: skip
 script: skip
@@ -19,6 +20,7 @@ jobs:
         - docker
       script: skip
       before_install:
+        - echo ${TEST_BASE64} | base64 --decode
         - openssl aes-256-cbc -K $encrypted_1c649cda91e0_key -iv $encrypted_1c649cda91e0_iv -in laboschqpa-k8s-travis-gcp-service-account.json.enc -out laboschqpa-k8s-travis-gcp-service-account.json -d
         - ls -lah
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
