--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
 #    - SKIP_DOCKER_BUILD=true
 #    - FORCE_DEPLOY_TO_GKE=true
 #    - SKIP_DEPLOY_TO_GKE=true
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
     - PROJECT_IMAGE_NAME=laboschqpa-client
     - SHORT_COMMIT_HASH=${TRAVIS_COMMIT::10}
     - IMAGE_NAME_COMMIT=${DOCKER_USERNAME}/${PROJECT_IMAGE_NAME}:${SHORT_COMMIT_HASH}
