--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "laboschqpa.client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --port 3000",
-    "build": "next build",
-    "start": "next start --port 3000"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/types": "^5.1.0",
-    "@types/lodash": "^4.14.168",
-    "axios": "^0.21.1",
-    "lodash": "^4.17.21",
-    "mui-rte": "^1.29.0",
-    "next": "10.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-error-boundary": "^3.1.1",
-    "react-notifications": "^1.7.2"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "typescript": "^4.2.3"
-  }
+    "name": "laboschqpa.client",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --port 3000",
+        "build": "next build",
+        "start": "next start --port 3000",
+        "tscompile": "tsc --build"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.58",
+        "@material-ui/types": "^5.1.0",
+        "@types/lodash": "^4.14.168",
+        "axios": "^0.21.1",
+        "lodash": "^4.17.21",
+        "mui-rte": "^1.29.0",
+        "next": "10.0.9",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-error-boundary": "^3.1.1",
+        "react-notifications": "^1.7.2"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.35",
+        "@types/react": "^17.0.3",
+        "typescript": "^4.2.3"
+    }
 }
