--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-error-boundary": "^3.1.1",
-        "react-notifications": "^1.7.2"
+        "react-notifications": "^1.7.2",
+        "react-player": "^2.9.0"
     },
     "devDependencies": {
         "@types/node": "^14.14.35",
