--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-error-boundary": "^3.1.1",
+        "react-google-charts": "^3.0.15",
         "react-notifications": "^1.7.2",
         "react-player": "^2.9.0"
     },
