--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev --port 3000",
+        "dev": "NODE_OPTIONS='--inspect=0.0.0.0:9229 --max-old-space-size=4096' next dev --port 3000",
         "build": "next build",
         "start": "next start --port 3000",
         "tscompile": "tsc --build"
